--- a/index.html
+++ b/index.html
@@ -9,27 +9,27 @@
   </head>
   <body>
     <div class="header">
-      <div>
-        <img
-          class="logo"
-          src="/Progetto sito/Immagini_progetto_sito/Logosito.png"
-          alt="logo"
-        />
-      </div>
-      <div class="site_title">
-        <a>
-          <h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1>
-        </a>
-      </div>
-      <div class="menu">
-        <div>
-          <a href="index.html">Home</a>
+      <div class="header_container">
+        <div class="site_title">
+          <img
+            class="logo"
+            src="/Immagini_progetto_sito/Logosito.png"
+            alt="logo"
+          />
+          <a>
+            <h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1>
+          </a>
         </div>
-        <div>
-          <a href="serie.html">La Serie</a>
-        </div>
-        <div>
-          <a href="gallery.html">Gallery</a>
+        <div class="menu">
+          <div>
+            <a href="index.html">Home</a>
+          </div>
+          <div>
+            <a href="serie.html">La Serie</a>
+          </div>
+          <div>
+            <a href="gallery.html">Gallery</a>
+          </div>
         </div>
       </div>
     </div>
@@ -39,18 +39,16 @@
         <!--Immagine di sfondo landingpage-->
         <img
           class="immagine_landing"
-          src="/Progetto sito/Immagini_progetto_sito/hero_homepage_png.png"
+          src="/Immagini_progetto_sito/hero_homepage_png.png"
         />
-        <div class="button overlay flex">
-          <div class="button_text">La Serie</div>
-          <div>
-            <img
-              class="arrow_icon"
-              src="Immagini_progetto_sito/arrow_right_white.png"
-              alt="icon"
-            />
-          </div>
-        </div>
+        <button class="overlay">
+          <p class="button_text">La Serie</p>
+          <img
+            class="arrow_icon"
+            src="Immagini_progetto_sito/arrow_right_white.png"
+            alt="icon"
+          />
+        </button>
       </div>
     </section>
 
@@ -65,30 +63,27 @@
           trailer e visita la pagina Wikipedia per avere una panoramica più
           ampia sulla serie.
         </p>
-      </div>
-      <video
-        src="/Progetto sito/Immagini_progetto_sito/PEPSIJET - Realizzato con Clipchamp.mp4"
-        controls
-        autoplay
-      ></video>
-      <div class="button flex">
-        <button class="button_wiki">
-          Wikipedia
-          <img
-            class="arrow_icon"
-            src="Immagini_progetto_sito/arrow_right_white.png"
-            alt="icon"
-          />
-        </button>
+        <video
+          src="/Immagini_progetto_sito/PEPSIJET - Realizzato con Clipchamp.mp4"
+          controls
+          autoplay
+        ></video>
+        <div class="button flex">
+          <button class="button_wiki">
+            Wikipedia
+            <img
+              class="arrow_icon"
+              src="Immagini_progetto_sito/arrow_right_white.png"
+              alt="icon"
+            />
+          </button>
+        </div>
       </div>
       <div class="cast_container">
         <h1>CAST</h1>
         <div class="cast_card_container">
           <div class="cast_card">
-            <img
-              src="/Progetto sito/Immagini_progetto_sito/John-Leonard.jpg"
-              alt=""
-            />
+            <img src="/Immagini_progetto_sito/John-Leonard.jpg" alt="" />
             <h2 class="John_text">John Leonard</h2>
           </div>
           <div class="cast_card">
@@ -114,9 +109,11 @@
     </section>
 
     <section class="section_home_gallery">
-    <img class="over_sfondo"src="/Progetto sito/Immagini_progetto_sito/pepsi jet sfondo con tv.jpeg" alt="">
-    
-
+      <img
+        class="over_sfondo"
+        src="/Immagini_progetto_sito/pepsi jet sfondo con tv.jpeg"
+        alt=""
+      />
     </section>
 
     <footer>
