primo-push-post-call

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <div class="header">
       <div class="header_container">
         <div class="site_title">
-          <img
+          <a href="#"><img
             class="logo"
             src="/Immagini_progetto_sito/Logosito.png"
             alt="logo"
-          />
-          <a>
+          /></a>
+          <a href="#">
             <h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1>
           </a>
         </div>
@@ -42,7 +42,7 @@
           src="/Immagini_progetto_sito/hero_homepage_png.png"
         />
         <button class="overlay">
-          <p class="button_text">La Serie</p>
+          <p class="button_text">La serie</p>
           <img
             class="arrow_icon"
             src="Immagini_progetto_sito/arrow_right_white.png"
@@ -80,7 +80,7 @@
         </div>
       </div>
       <div class="cast_container">
-        <h1>CAST</h1>
+        <h1 class="cast_title">CAST</h1>
         <div class="cast_card_container">
           <div class="cast_card">
             <img src="/Immagini_progetto_sito/John-Leonard.jpg" alt="" />
@@ -88,7 +88,7 @@
           </div>
           <div class="cast_card">
             <img src="Immagini_progetto_sito/hoffman-laugh-cast.png" alt="" />
-            <h2 class="John_text">Todd Hoffman</h2>
+            <h2 class="Todd_text">Todd Hoffman</h2>
           </div>
 
           <div class="cast_card">
@@ -96,7 +96,7 @@
               src="Immagini_progetto_sito/Cindy Crawford, 1990s_ - History.jpg"
               alt=""
             />
-            <h2 class="John_text">Cindy Crawford</h2>
+            <h2 class="Cindy_text">Cindy Crawford</h2>
           </div>
         </div>
         <p class="p_cast">
@@ -104,7 +104,16 @@
           vicenda Pepsi-Jet. Tra questi troviamo avvocati, investitori,
           pubblicitari e top models.
         </p>
-        <button button_cast>Cast</button>
+        <div class="button flex">
+          <button class="button_cast">
+            Cast
+            <img
+              class="arrow_icon"
+              src="Immagini_progetto_sito/arrow_right_white.png"
+              alt="icon"
+            />
+          </button>
+        </div>
       </div>
     </section>
 
@@ -114,25 +123,35 @@
         src="/Immagini_progetto_sito/pepsi jet sfondo con tv.jpeg"
         alt=""
       />
+      <div class="button flex">
+        <button class="button_gallery">
+          Gallery
+          <img
+            class="arrow_icon"
+            src="Immagini_progetto_sito/arrow_right_white.png"
+            alt="icon"
+          />
+        </button>
+      </div>
     </section>
 
     <footer>
       <div class="footer_caption">
         <div class="logo_footer">
-          <img src="Immagini_progetto_sito/Logosito.png" alt="Logosito" />
-          <h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1>
+          <a href="#"><img src="Immagini_progetto_sito/Logosito.png" alt="Logosito" /></a>
+          <a href="#"><h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1></a>
         </div>
         <p>
           Pepsi: Where is my Jet? è la docu-serie che non ti aspetti! Segui i
           canali social della fan base per rimanere sempre aggiornato!
         </p>
         <div class="icons_container">
-          <img
+          <a href="https://www.instagram.com/pepsiwheresmyharrierjet/"><img
             src="Immagini_progetto_sito/Instagram_icon.png"
             alt="Instagram_icon"
-          />
+          /></a>
           <img src="Immagini_progetto_sito/FB_icon.png" alt="Fb_icon" />
-          <img src="Immagini_progetto_sito/Pepsi_icon.png" alt="Pepsi_icon" />
+          <a href="https://pepsimax.it/"><img src="Immagini_progetto_sito/Pepsi_icon.png" alt="Pepsi_icon" /></a>
         </div>
       </div>
       <div class="footer_links_container">
