--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             src="/Immagini_progetto_sito/Logosito.png"
             alt="logo"
           /></a>
-          <a href="#">
+          <a class="logo_link" href="#">
             <h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1>
           </a>
         </div>
@@ -139,7 +139,7 @@
       <div class="footer_caption">
         <div class="logo_footer">
           <a href="#"><img src="Immagini_progetto_sito/Logosito.png" alt="Logosito" /></a>
-          <a href="#"><h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1></a>
+          <a class="logo_link" href="#"><h1 class="Pepsi_red">PEPSI<span class="Jet_blue">JET</span></h1></a>
         </div>
         <p>
           Pepsi: Where is my Jet? è la docu-serie che non ti aspetti! Segui i
@@ -150,7 +150,7 @@
             src="Immagini_progetto_sito/Instagram_icon.png"
             alt="Instagram_icon"
           /></a>
-          <img src="Immagini_progetto_sito/FB_icon.png" alt="Fb_icon" />
+          <a href="https://it-it.facebook.com/"><img src="Immagini_progetto_sito/FB_icon.png" alt="Fb_icon" /></a>
           <a href="https://pepsimax.it/"><img src="Immagini_progetto_sito/Pepsi_icon.png" alt="Pepsi_icon" /></a>
         </div>
       </div>
