--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="index.html">Home</a>
           </div>
           <div>
-            <a href="serie.html">La Serie</a>
+            <a href="laserie.html">La Serie</a>
           </div>
           <div>
             <a href="gallery.html">Gallery</a>
